fixed double column on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,12 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
+ @media (max-width: 767px) {
+  .column-max-height {
+    max-height: 190px;
+  }
+}
+
 body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   overflow-x: hidden;
